--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,27 @@
 </head>
 
 <body>
-    <header>
+    <header id="titulo">
+        <!--<link href="//db.onlinewebfonts.com/c/2ece2ca570f9b741d03cd6305ce9f8d5?family=NoyhRW01-SemiLight" rel="stylesheet" type="text/css"/> -->
         <img src="./img/portada.jpg" alt="portada imagen pastel de manzana">
+        <h1>Apple Pie</h1>        
     </header>
 
     <article>
-        <section>
-            <h1> Apple Pie </h1>
+        <section id="seccion_presentacion">
+            <br>
+            <br>
             <br>
             <p>This was my grandmother's apple pie recipe. I have never seen another one</p>
             <p>quite like it. It will always be my favorite and has won me several first place</p>
             <p>prizes in local competitions. I hope it becomes one of your favorites as well!</p>
+            <br>
+            <p><img src="./img/recipe-info.png" alt=""></p>
             <p class="parrafo_linea_negra"></p>
         </section>
 
         <section>
             <h1>Ingredients</h1>
-            <br>
             <p>- 1 recipe pastry for a 9 inch double crust pie</p>
             <p>- 1/2 cup unsalted butter</p>
             <p>- 3 tablespoons all-purpose flour</p>
@@ -35,20 +39,22 @@
             <p>- 1/2 cup white sugar</p>
             <p>- 1/2 cup packed brown sugar</p>
             <p>- 8 Granny Smith apples - peeled, cored and sliced</p>
+            <p><img src="./img/cooking-info.png" alt=""></p>
             <p class="parrafo_linea_negra"></p>
         </section>
 
         <section>
             <h1>Directions</h1>
-            <br>
-            <p>Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in</p>
+            <p>1) Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in</p>
             <p>flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce</p>
             <p>temperature and let simmer.</p>
-            <p>Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a</p>
+            <p>2) Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a</p>
             <p>lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so</p>
             <p>that it does not run off.</p>
-            <p>Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175</p>
+            <p>3) Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175</p>
             <p>degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</p>
+            <br>
+            <br>
         </section>
     </article>
 
